<?xml version="1.0" encoding="utf-8"?>

<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_down_refresh"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".activities.MainActivity">

        <TextView
            android:id="@+id/title_bar"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:background="#a58f65"
            android:gravity="center"
            android:orientation="horizontal"
            android:text="@string/sample_date_time"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />


        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_bar">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/temparature_display"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/sample_temperature"
                    android:textColor="@color/white"
                    android:textSize="62sp"
                    android:textStyle="bold"
                    tools:ignore="RelativeOverlap,TextContrastCheck" />

                <TextView
                    android:id="@+id/feels_like_temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/temparature_display"
                    android:layout_marginStart="20dp"
                    android:text="@string/sample_substr_temperature"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="italic"
                    tools:ignore="TextContrastCheck" />

                <ImageView
                    android:id="@+id/view_weather_icon_image"
                    android:layout_width="140dp"
                    android:layout_height="80dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/weather_icon"
                    android:src="@drawable/clear_day" />

                <TextView
                    android:id="@+id/weather_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/feels_like_temperature"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="10dp"
                    android:gravity="center_horizontal"
                    android:maxLines="2"
                    android:text="@string/partially_cloudy"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/windspeed_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/weather_description"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginEnd="10dp"
                    android:gravity="center_horizontal"
                    android:maxLines="2"
                    android:text="@string/sample_wind_dir"
                    android:textColor="#EAEAEA"
                    android:textSize="17sp"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/humidity_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/windspeed_view"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:gravity="center_horizontal"
                    android:maxLines="2"
                    android:text="@string/sample_humidity"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/UV_index_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/humidity_view"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:gravity="center_horizontal"
                    android:maxLines="2"
                    android:text="@string/sample_uv_index"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/visibility_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/humidity_view"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:gravity="center_horizontal"
                    android:maxLines="2"
                    android:text="@string/sample_visibility"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    tools:ignore="TextContrastCheck" />

                <LinearLayout
                    android:id="@+id/daily_weather_overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/UV_index_view"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="5dp"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/morning_temp_view"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@string/sample_temperature"
                            android:textColor="@color/white"
                            android:textSize="25sp"
                            android:textStyle="bold"
                            tools:ignore="TextContrastCheck" />

                        <TextView
                            android:id="@+id/morning_textView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@string/morning"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            tools:ignore="TextContrastCheck" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/afternoon_temp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@string/sample_temperature"
                            android:textColor="@color/white"
                            android:textSize="25sp"
                            android:textStyle="bold"
                            tools:ignore="TextContrastCheck" />

                        <TextView
                            android:id="@+id/afternoon_textView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@string/afternoon"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            tools:ignore="TextContrastCheck" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/evening_temp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@string/sample_temperature"
                            android:textColor="@color/white"
                            android:textSize="25sp"
                            android:textStyle="bold"
                            tools:ignore="TextContrastCheck" />

                        <TextView
                            android:id="@+id/evening_textView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@string/evening"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            tools:ignore="TextContrastCheck" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/night_temp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@string/sample_temperature"
                            android:textColor="@color/white"
                            android:textSize="25sp"
                            android:textStyle="bold"
                            tools:ignore="TextContrastCheck" />

                        <TextView
                            android:id="@+id/night_textView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@string/night"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            tools:ignore="TextContrastCheck" />

                    </LinearLayout>
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/weather_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/daily_weather_overview"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="8dp"
                    android:background="#80CAC9C9"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_hourly_weather" />

            </RelativeLayout>
        </ScrollView>

        <TextView
            android:id="@+id/sunrise_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/scroll_view"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:gravity="bottom"
            android:text="@string/sample_sunrise"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="italic"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/sunset_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/scroll_view"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="bottom"
            android:text="@string/sample_sunset"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="italic"
            tools:ignore="RelativeOverlap,TextContrastCheck" />

    </RelativeLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>